@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
-
 	<defaultcontrol always="true">8000</defaultcontrol>
 	<include>fadeInOut</include>
-
 	<controls>						
 		<control type="group">
-			
 			<!--fade out if audio / video menu active-->
 			<animation type="Conditional" condition="Window.IsActive(osdvideosettings) | Window.IsActive(osdaudiosettings)">
 				<effect type="fade" start="100" end="0" time="200" tween="sine" easing="in" />
 			</animation>
-											
 			<!--background-->
 			<control type="group">
 				<posx>0</posx>
 				<posy>0</posy>							
-										
 				<!--overlay-->
 				<control type="image">
 					<posx>-200</posx>
@@ -27,14 +22,11 @@
 					<colordiffuse>ccffffff</colordiffuse>
 					<aspectratio>stretch</aspectratio>
 				</control>
-													
 			</control>
-	
 			<!--title info-->
 			<control type="group">	
 				<posx>col-1-begin</posx>
 				<posy>row-15-begin</posy>
-															
 				<!--content description-->
 				<control type="label">
 					<posx>0</posx>
@@ -45,7 +37,6 @@
 					<label>[B]$INFO[System.Time(hh:mm)][/B]</label>
 					<scroll>false</scroll>
 				</control>
-			
 				<control type="label" id="20">
 					<posx>3-col</posx>
 					<posy>0</posy>
@@ -55,7 +46,6 @@
 					<label>[UPPERCASE]$INFO[Videoplayer.tvshowTitle,, • ]$INFO[Videoplayer.title][/UPPERCASE]</label>
 					<scroll>false</scroll>
 				</control>
-				
 				<control type="label">
 					<posx>3-col</posx>
 					<posy>50</posy>
@@ -67,15 +57,11 @@
 					<scroll>true</scroll>
 					<scrollspeed>60</scrollspeed>
 				</control>
-																														
-			</control>
-		
+			</control>		
 			<!--dialog controls-->
 			<control type="group">
-		
 				<posx>0</posx>
 				<posy>row-17-begin</posy>
-									
 				<control type="image">
 					<posx>-200</posx>
 					<posy>-12</posy>
@@ -163,7 +149,7 @@
 							<label>287</label>
 							<thumb>-</thumb>
 							<onclick>Close</onclick>
-							<onclick>ActivateWindow(SubtitleSearch)</onclick>
+							<onclick>activateWindow(5100)</onclick>
 						</item>
 						<item id="6">
 							<label>298</label>
