@@ -1,0 +1,108 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<window type="dialog" id="5100">
+    <defaultcontrol always="true">5000</defaultcontrol>
+    <allowoverlay>yes</allowoverlay>
+  	<controls>
+		<include>fadeInOut</include>
+		<control type="group">
+			<visible>!Window.IsVisible(SliderDialog)</visible>
+			<control type="image">
+	            <posx>0</posx>
+	            <posy>0</posy>
+	            <width>fullscreenWidth</width>
+	            <height>fullscreenHeight</height>
+	            <aspectratio>stretch</aspectratio>
+	            <texture>colors/black.png</texture>
+	            <colordiffuse>ccFFFFFF</colordiffuse>
+	        </control>
+			<control type="image">
+	            <include>dimensionsFullscreen</include>
+	            <texture>backgrounds/vignette.png</texture>
+	            <colordiffuse>ffffffff</colordiffuse>
+	            <aspectratio>stretch</aspectratio>
+	        </control>
+	        <control type="group">
+				<posx>col-10-begin</posx>
+	            <posy>row-7-begin</posy>
+	            <!--animations-->
+	            <include>modalDialogInOut</include>
+
+	            <!--subtitle menu-->
+	            <control type="grouplist" id="5000">
+	                <posx>0</posx>
+	                <posy>0</posy>
+	                <width>6-col</width>
+	                <height>11-row</height>
+	                <itemgap>0</itemgap>
+                
+	                <control type="button" id="5001">
+	                    <description>Download Subtitle</description>
+	                    <height>1-row</height>
+	                    <width>6-col</width>
+	                    <font>itemTitle</font>
+	                    <textcolor>unselected</textcolor>
+	                    <focusedcolor>selected</focusedcolor>
+	                    <texturefocus>-</texturefocus>
+	                    <texturenofocus>-</texturenofocus>
+	                    <textoffsetx>0</textoffsetx>
+	                    <label>31154</label>
+	                    <onclick>Dialog.Close(VideoOSD)</onclick>
+						<onclick>ActivateWindow(SubtitleSearch)</onclick>
+	                </control>
+
+					<control type="button" id="5002">
+	                    <description>Subtitle Offset</description>
+						<enable>VideoPlayer.HasSubtitles + VideoPlayer.SubtitlesEnabled</enable>
+	                    <height>1-row</height>
+	                    <width>6-col</width>
+	                    <font>itemTitle</font>
+	                    <textcolor>unselected</textcolor>
+	                    <focusedcolor>selected</focusedcolor>
+	                    <texturefocus>-</texturefocus>
+	                    <texturenofocus>-</texturenofocus>
+	                    <textoffsetx>0</textoffsetx>
+	                    <label>31155</label>
+	                    <onclick>SubtitleDelay</onclick>
+	                </control>
+
+					<!--
+					<control type="button" id="5003">
+	                    <description>Select next subtitle</description>
+						<enable>VideoPlayer.HasSubtitles + VideoPlayer.SubtitlesEnabled</enable>
+	                    <height>1-row</height>
+	                    <width>6-col</width>
+	                    <font>itemTitle</font>
+	                    <textcolor>unselected</textcolor>
+	                    <focusedcolor>selected</focusedcolor>
+	                    <texturefocus>-</texturefocus>
+	                    <texturenofocus>-</texturenofocus>
+	                    <textoffsetx>0</textoffsetx>
+	                    <label>Next subtitle</label>
+	                    <onclick>NextSubtitle</onclick>
+	                </control>
+					-->
+
+					<control type="radiobutton" id="5004">
+						<description>Enable subtitles</description>
+						<enable>VideoPlayer.HasSubtitles</enable>
+						<textoffsetx>0</textoffsetx>
+						<textcolor>unselected</textcolor>
+				        <focusedcolor>selected</focusedcolor>
+						<texturefocus>-</texturefocus>
+						<width>6-col</width>
+						<label>449</label>
+						<onclick>ShowSubtitles</onclick>
+						<selected>VideoPlayer.SubtitlesEnabled</selected>
+					</control>
+                
+	            </control>
+	        </control>
+		</control>
+        <!--debugging-->
+        <include>DebugGrid</include>
+        <control type="label">
+            <include>DialogID</include>
+            <label>custom_subtitleMenu.xml</label>
+        </control>
+    </controls>
+</window>
